# c-commons-dynamic-lib

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  array-util.c  common-functions.h  constants.c  file-util.c  scan-util.c  string-util.c
common-array/: boolean-array.c  common-array.h  double-array.c  int-array.c  long-array.c  string-array.c
common-matrix/: boolean-matrix.c  char-matrix.c  common-matrix.h  double-matrix.c  int-matrix.c
common-number/: common-number.c  common-number.h
common-string/: common-string.c
src/: common-var.c
src/common-array/: boolean-array.c  char-array.c  common-array.h  double-array.c  int-array.c  long-array.c  string-array.c
src/common-matrix/: boolean-matrix.c  char-matrix.c  common-matrix.h  double-matrix.c  int-matrix.c  long-matrix.c  string-matrix.c
src/common-string/: common-string.c
src/common-utility/: common-utility.h  constants.c  file-util.c  scan-util.c
src/common_array/: boolean_array.c  char_array.c  double_array.c  int_array.c  long_array.c  string_array.c
src/common_matrix/: boolean_matrix.c  char_matrix.c  double_matrix.c  int_matrix.c  long_matrix.c  string_matrix.c
src/common_number/: common_number.c
src/common_string/: common_string.c
src/common_utility/: file_util.c  scan_util.c
test/: common-test.cpp
test/common-array/: bool-array.txt  common-array-test.cpp  double-array.txt  int-array.txt  long-array.txt  string-array.txt
test/common-matrix/: common-matrix-test.cpp  double-matrix.txt  int-matrix.txt  long-matrix.txt  string-matrix.txt
